// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddressItem /> Address flag should match snapshot 1`] = `
<span>
  <a
    class="my-clickable  my-link my-secondary-fg"
    href="https://etherscan.io/address/0x0000000000000000000000000000000000000111"
    rel="noreferrer"
    tabindex="0"
    target="_blank"
  >
    <span
      class="my-badge my-light-bg  my-clickable"
    >
      <span
        class="my-icon  "
      >
        <span
          class=" "
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-wallet fa-w-16 "
            data-icon="wallet"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M461.2 128H80c-8.84 0-16-7.16-16-16s7.16-16 16-16h384c8.84 0 16-7.16 16-16 0-26.51-21.49-48-48-48H64C28.65 32 0 60.65 0 96v320c0 35.35 28.65 64 64 64h397.2c28.02 0 50.8-21.53 50.8-48V176c0-26.47-22.78-48-50.8-48zM416 336c-17.67 0-32-14.33-32-32s14.33-32 32-32 32 14.33 32 32-14.33 32-32 32z"
              fill="currentColor"
            />
          </svg>
        </span>
        <span
          class="my-icon-label "
        >
          My Wallet
        </span>
      </span>
    </span>
  </a>
</span>
`;

exports[`<AddressItem /> Address hash should match snapshot 1`] = `
<span>
  <a
    class="my-clickable  my-link my-secondary-fg"
    href="https://etherscan.io/address/0x0000000000000000000000000000000000000111"
    rel="noreferrer"
    tabindex="0"
    target="_blank"
  >
    <span
      class="my-addresshash"
    >
      0x0000000000000000000000000000000000000111
    </span>
  </a>
</span>
`;
